@@ -3,6 +3,8 @@
 * Development
 
 - compat-27: Drop obsolete ~compat-call dired-get-marked-files~.
+- compat-29: Add ~with-restriction~ and ~without-restriction~.
+- compat-29: Drop ~with-narrowing~.
 
 * Release of "Compat" Version 29.1.3.4
 
